--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,11 +3,12 @@
   "host": "localhost",
   "port": "5432",
   "username": "postgres",
-  "password": "docker",
+  "password": "postgres",
   "database": "gostack_desafio09",
   "entities": ["./src/modules/**/infra/typeorm/entities/*.ts"],
   "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
   "cli": {
     "migrationsDir": "./src/shared/infra/typeorm/migrations"
-  }
+  },
+  "logging": false
 }
